fixed: contato spheres click on mobile

--- a/app/scss/layout/_contato/_spheres.scss
+++ b/app/scss/layout/_contato/_spheres.scss
@@ -1,12 +1,17 @@
 .spheres {
-  display: grid;
-  row-gap: 1rem;
-  padding: 7rem 10vw 0 0;
+
+  height: 100vh;
+  overflow: hidden;
+
+
+  padding: 6rem 10vw 0 0;
+
 
   &__item {
     width: 100%;
 
     position: relative;
+    margin-bottom: $d-sm;
 
     @extend %flex-center;
     justify-content: flex-end;
@@ -18,9 +23,11 @@
     &--email {
       @include transition(0.2s, 0s);
     }
+
     &--github {
       @include transition(0.2s, 0.1s);
     }
+
     &--phone {
       @include transition(0.2s, 0.2s);
     }
@@ -82,15 +89,17 @@
 
 @include media(700px) {
   .spheres {
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     row-gap: 0;
     columns: 2rem;
     justify-items: center;
 
-    padding: 10rem 10vw 0 10vw;
+    padding: 0 10vw;
 
     &__item {
       justify-content: center;
+      margin-bottom: 0;
     }
 
     &__btnBox {
@@ -127,6 +136,7 @@
 
 @include media(950px) {
   .spheres {
+
     &__btnBox,
     &__btn,
     &__line {
